# esp32-s3-usb-otg-rust

./: .gitignore  .gitpod.Dockerfile  Cargo.toml  sdkconfig.defaults  sdkconfig.defaults.esp32s3
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: README.md
scripts/: flash.sh  run-wokwi.sh
src/: main.rs
