[package]
name = "esp32-s3-usb-otg"
version = "0.1.0"
authors = ["Justin Luoma<justin@justinluoma.com>"]
edition = "2021"
license = "MIT"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

pio = ["esp-idf-sys/pio"]


[patch.crates-io]
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
log = "0.4.17"
esp-idf-sys = { version = "0.31.8", features = ["binstart"] }
esp-idf-svc = "0.42.3"
esp-idf-hal = "0.38.1"
embedded-hal = "0.2.7"
nb = "1.0.0"
mipidsi = "0.3.0"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7"
tinybmp = "0.3.3"
futures = "0.3.23"
esp32s3-hal = { version = "0.1.0" }
xtensa-lx-rt   = { version = "0.13.0", features = ["esp32s3"]}
critical-section = { version = "1.1.0" }

[build-dependencies]
embuild = "0.30.3"
anyhow = "1"
